--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -13,6 +13,7 @@
     "com.unity.xr.arkit": "5.1.0-pre.2",
     "com.unity.xr.interaction.toolkit": "2.1.1",
     "com.unity.xr.openxr": "1.5.1",
+    "jp.keijiro.klak.ndi": "2.1.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
@@ -45,5 +46,13 @@
     "com.unity.modules.wind": "1.0.0",
     "com.unity.modules.xr": "1.0.0"
   },
-  "scopedRegistries": []
+  "scopedRegistries": [
+    {
+      "name": "Keijiro",
+      "url": "https://registry.npmjs.com",
+      "scopes": [
+        "jp.keijiro"
+      ]
+    }
+  ]
 }
